[project]
name = "asyncio-gevent"
version = "0.2.3"
description = "asyncio & gevent in harmony"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["gevent>=24.11.1"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pydocstyle>=6.3.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "reorder-python-imports>=3.14.0",
]

[tool.mypy]
ignore_missing_imports = true
